# utility

./: .env.example  .flake8  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: utility.yml
backend/: dump.json
backend/apartments/: admin.py  models.py  serializers.py  views.py
backend/apartments/migrations/: 0001_initial.py  0002_apartment_unique_apartment_for_building.py
backend/api/: urls.py
backend/backend/: celery.py  constants.py  settings.py
backend/bills/: models.py  serializers.py  services.py  tasks.py  validators.py  views.py
backend/bills/migrations/: 0001_initial.py  0002_alter_tariff_until_date.py
docker/backend/: .dockerignore  Dockerfile  server-entrypoint.sh
tests/: conftest.py  test_celery.py  test_houses.py
tests/fixtures/: fixture_bills.py  fixture_celery.py  fixture_data.py
