[tool.poetry]
name = "utility"
version = "0.1.0"
description = "Test task"
authors = ["Alex Naumov <algena75@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.1"
djangorestframework = "3.14.00"
psycopg2-binary = "2.9.9"
celery = {extras = ["redis"], version = "^5.4.0"}


[tool.poetry.group.test.dependencies]
flake8 = "^7.1.0"
pytest = "8.2.2"
pytest-django = "4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
